[package]
name = "plato-hook-helper"
description = "a set of utility functions to assist with writing fetch hooks for the Plato e-reader document system."
repository = "https://github.com/videah/plato-hook-helper"
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }